2018-12-04 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: now infer the version number from VERSION.
    * doc/rivet.xml,doc/xml/examples.xml: modified example "color table"

2018-12-03 Massimo Manghi <mxmanghi@apache.org>
	* cmake/CMakeList.c: we infer the version number from the file
	VERSION assumed to reside in the project root directory
	* src/parser/rivetParser.c: 
	* src/mod_rivet_ng/mod_rivet_common.c: type cast of pointer
	arithmetics into int

2018-11-23 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure,ac: version number bumped to 3.2.0 as we created
    3.1 out of branch 3.0 in order to highlight possible regressions that
    may surface as a consequence of fixing bug #62926

2018-11-20 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: patching from 3.0 to fix bug #62926
    * tests/post.rvt,fqrivet_var.tcl: add tests to prevent post and get
    variables crosstalk (bug #92926)
    * doc/rivet.xml.in: displaying full version associated to the manual

2018-11-11 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: correct macro description
    * src/mod_rivet_ng/rivetChannel.c: new copyright notice
    * doc/xml/commands.xml: correct sentence in ::rivet::exit manual page

2018-11-02 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/mod_rivet.[c|h]: add macro RIVET_MPM_BRIDGE to
    compose rivet bridge names

2018-10-17 Massimo Manghi <mxmanghi@apache.org>
    * tests/commands.tcl: changing test on self closing element
    * [doc/rivet.xml.in|doc/rivet.xml]: removed delimiters of
    symbols expanded by svn
    * doc/xml/commands.xml: fixed entities in ::rivet::xml manual page

2018-08-16 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: changing form to support single self
    closing XML elements such as <tag attr1="val1" attr2="val2".... /> 
    when if the text string is empty
    * tests/commands.tcl: changing ::rivet::xml test accordingly