@@ -123,12 +123,12 @@ set(mod_rivet_sources
 
 #  Add build targets...
 # ===========================================================================
-add_library(mod_rivet            ${mod_rivet_sources})
-add_library(rivetparser          ${rivetparser_sources})
-add_library(rivetlib             ${rivetlib_sources})
-add_library(rivet_worker_mpm     ${rivet_worker_mpm_sources})
-add_library(rivet_prefork_mpm    ${rivet_prefork_mpm_sources})
-add_library(rivet_lazy_mpm       ${rivet_lazy_mpm_sources})
+add_library(mod_rivet            SHARED ${mod_rivet_sources})
+add_library(rivetparser          SHARED ${rivetparser_sources})
+add_library(rivetlib             SHARED ${rivetlib_sources})
+add_library(rivet_worker_mpm     SHARED ${rivet_worker_mpm_sources})
+add_library(rivet_prefork_mpm    SHARED ${rivet_prefork_mpm_sources})
+add_library(rivet_lazy_mpm       SHARED ${rivet_lazy_mpm_sources})
 add_library(rivet::parser        ALIAS rivetparser)
 add_library(rivet::lib           ALIAS rivetparser)
 add_library(rivet::rivet         ALIAS mod_rivet)
@@ -140,8 +140,12 @@ SET_TARGET_PROPERTIES(mod_rivet         PROPERTIES PREFIX "" SUFFIX ".so")
 SET_TARGET_PROPERTIES(rivet_worker_mpm  PROPERTIES PREFIX "" SUFFIX ".so")
 SET_TARGET_PROPERTIES(rivet_prefork_mpm PROPERTIES PREFIX "" SUFFIX ".so")
 SET_TARGET_PROPERTIES(rivet_lazy_mpm    PROPERTIES PREFIX "" SUFFIX ".so")
-SET_TARGET_PROPERTIES(rivetparser       PROPERTIES PREFIX "lib")
-SET_TARGET_PROPERTIES(rivetlib          PROPERTIES PREFIX "lib")
+
+# these definition shouldn't rely on the .so suffix, but use Tcl's 
+# introspection to determine the correct suffix portably
+
+SET_TARGET_PROPERTIES(rivetparser       PROPERTIES PREFIX "lib" SUFFIX ".so")
+SET_TARGET_PROPERTIES(rivetlib          PROPERTIES PREFIX "lib" SUFFIX ".so")
 
 #  Definitions...
 # ===========================================================================
@@ -186,6 +190,19 @@ MESSAGE ( STATUS "  TCL_STUB_LIBRARY:        " ${TCL_STUB_LIBRARY} )
 #  Locate Apache...
 # ===========================================================================
 MESSAGE ( STATUS "Searching for Apache..." )
+
+if (NOT "${with-apache}" STREQUAL "")
+  MESSAGE ( STATUS "  Apache directory manually set by -Dwith-apache=" ${with-apache} )
+  get_filename_component(RIVET_APACHE_ROOT "${with-apache}" ABSOLUTE)
+  MESSAGE ( STATUS "  Setting Apache root to: " ${RIVET_APACHE_ROOT} )
+
+  set ( APACHE_ROOT ${RIVET_APACHE_ROOT} )
+  set ( APACHE_MODULE_DIR "${RIVET_APACHE_ROOT}/modules" )
+  set ( APACHE_LIB_DIR "${RIVET_APACHE_ROOT}/lib" )
+  set ( TclStub_ROOT ${RIVET_APACHE_ROOT})
+
+endif ()
+
 find_package(APACHE REQUIRED)
 MESSAGE ( STATUS "  APACHE_INCLUDE_DIR:      " ${APACHE_INCLUDE_DIR} )
 MESSAGE ( STATUS "  APACHE_MODULE_DIR:       " ${APACHE_MODULE_DIR} )
@@ -253,9 +270,9 @@ if(WIN32)
   #SET_TARGET_PROPERTIES(mod_rivet PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
 
   target_link_libraries(mod_rivet          ${APR_LIBRARY} ${APACHE_HTTPD_LIBRARY} )
-  target_link_libraries(rivet_worker_mpm   ${APR_LIBRARY} ${APRUTIL_LIBRARY} ${APACHE_HTTPD_LIBRARY} mod_rivet)
-  target_link_libraries(rivet_prefork_mpm  ${APR_LIBRARY} ${APACHE_HTTPD_LIBRARY} mod_rivet)
-  target_link_libraries(rivet_lazy_mpm     ${APR_LIBRARY} ${APACHE_HTTPD_LIBRARY} mod_rivet)
+  target_link_libraries(rivet_worker_mpm   ${APR_LIBRARY} ${APRUTIL_LIBRARY} ${APACHE_HTTPD_LIBRARY} mod_rivet )
+  target_link_libraries(rivet_prefork_mpm  ${APR_LIBRARY} ${APACHE_HTTPD_LIBRARY} mod_rivet )
+  target_link_libraries(rivet_lazy_mpm     ${APR_LIBRARY} ${APACHE_HTTPD_LIBRARY} mod_rivet )
   # rivet_worker_mpm.c uses round(), which is available in C99
   SET_TARGET_PROPERTIES(rivet_worker_mpm PROPERTIES C_STANDARD 99)
   if(MSVC)
@@ -306,7 +323,7 @@ set(UPLOAD_DIR ${with-upload-dir})
 #  Location of the Rivet library...
 # ===========================================================================
 if(NOT DEFINED RIVETLIB_DESTDIR)
-  set(RIVETLIB_DESTDIR "${APACHE_LIB_DIR}/rivet${RIVET_VERSION}")
+  set(RIVETLIB_DESTDIR "${APACHE_ROOT}/rivet${RIVET_VERSION}")
 endif(NOT DEFINED RIVETLIB_DESTDIR)
 
 if(TCL_THREADS)
