@@ -39,6 +39,8 @@
 
 APLOG_USE_MODULE(rivet);
 
+
+
 /* init.tcl file relative to the server root directory */
 
 #define RIVET_DIR  RIVET_RIVETLIB_DESTDIR
@@ -321,11 +323,5 @@ Tcl_Obj* Rivet_CurrentServerRec (Tcl_Interp* interp, server_rec* s);
 #define RIVET_MPM_BRIDGE rivet_bridge_table bridge_jump_table =
 
 #define RIVET_MPM_BRIDGE_COMPOSE(bridge) RIVET_DIR,"/mpm/rivet_",bridge,"_mpm.so"
-
-#ifdef WIN32
-#define DLLIMPORT   __declspec( dllimport )
-#else
-#define DLLIMPORT
-#endif
 
 #endif /* MOD_RIVET_H */
